thêm bảng cho certificatecertificate